--- a/my-react-portfolio/package.json
+++ b/my-react-portfolio/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://sandragruiz.github.io/my-react-portfolio",
   "name": "my-react-portfolio",
   "version": "0.1.0",
   "private": false,
@@ -6,7 +7,6 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
@@ -41,8 +41,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "gh-pages": "^5.0.0",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2"
-  },
-  "homepage": "https://sandragruiz.github.io/my-react-portfolio"
+  }
 }
